--- a/form-filmmaker.html
+++ b/form-filmmaker.html
@@ -55,11 +55,16 @@
           <h3 class="profile-title underlined uppercase">профайл кинодеятеля</h3>
         </div>
       </div>
-      <div class="prompt">
-        <p class="description uppercase red">Для того, чтобы открыть доступ к поиску талантов и кинодеятелей
-          внесите дополнительную информацию.
-        </p>
+      <div class="row">
+        <div class="col-md-7">
+          <div class="prompt">
+            <p class="description uppercase red">Для того, чтобы открыть доступ к поиску талантов и кинодеятелей
+              внесите дополнительную информацию.
+            </p>
+          </div>
+        </div>
       </div>
+
 
       <div class="row">
         <div class="col-12">
@@ -1126,7 +1131,8 @@
         </div>
 
         <div class="photo photo-15">
-          <img class="img-block" src="assets/images/bg-4.jpg" alt="">
+          <img class="img-block display-sm-none" src="assets/images/bg-4.jpg" alt="">
+          <img class="img-block display-desc-none" src="assets/images/bg-20.jpg" alt="">
           <div class="photo-description">
             <p class="description">Загрузите фотографию в формате JPG</p>
           </div>
@@ -1138,7 +1144,8 @@
         </div>
 
         <div class="photo photo-16">
-          <img class="img-block" src="assets/images/bg-1.jpg" alt="">
+          <img class="img-block display-sm-none" src="assets/images/bg-1.jpg" alt="">
+          <img class="img-block display-desc-none" src="assets/images/bg-19.jpg" alt="">
           <div class="photo-description">
             <p class="description">Загрузите фотографию в формате JPG</p>
           </div>
