--- a/form_talents.html
+++ b/form_talents.html
@@ -1991,7 +1991,8 @@
           </div>
 
           <div class="photo photo-15">
-            <img class="img-block" src="assets/images/bg-4.jpg" alt="">
+            <img class="img-block display-sm-none" src="assets/images/bg-4.jpg" alt="">
+            <img class="img-block display-desc-none" src="assets/images/bg-20.jpg" alt="">
             <div class="photo-description">
               <p class="description">Загрузите фотографию в формате JPG</p>
             </div>
