--- a/main-company.html
+++ b/main-company.html
@@ -19,6 +19,11 @@
     <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
   </a>
   <header class="header sm-header">
+    <ul class="navigation-menu">
+      <li class="menu-item"><a href="#" class="menu-link">моя страница</a></li>
+      <li class="menu-item"><a href="#" class="menu-link">КАСТИНГИ</a></li>
+      <li class="menu-item"><a href="#" class="menu-link">НАСТРОЙКИ</a></li>
+    </ul>
     <nav class="header-nav sm-nav">
       <ul class="navigation">
         <li class="menu-item"><span class="profile-ico"></span></li>
@@ -37,185 +42,194 @@
   </header>
 </div>
 
+<div class="left-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-7 col-md-12">
+        <div class="profile-photo">
+          <img class="img-block" src="assets/images/profile-img-3.jpg" alt="">
+        </div>
+        <ul class="menu-list">
+          <li class="list-item"><a href="">Общая информация</a></li>
+          <li class="list-item"><a href="">Образование</a></li>
+          <li class="list-item"><a href="">навыки</a></li>
+          <li class="list-item"><a href="">Творческий опыт</a></li>
+          <li class="list-item"><a href="">Медиа-файлы</a></li>
+          <li class="list-item"><a href="">о себе</a></li>
+          <li class="list-item"><a href="">ЗДОРОВЬЕ</a></li>
+        </ul>
+        <div class="link-block">
+          <div class="link-views">
+            <img src="assets/images/open-eye.svg" alt="">
+            <p class="description">500 / 450</p>
+          </div>
+        </div>
+        <div class="block">
+          <div class="contacts-block">
+            <h3 class="title red underlined uppercase">представитель компании</h3>
+            <p class="description">Лаура Ергалиева</p>
+            <p class="description">исполнительный директор</p>
+            <p class="description">+7 000 000 00 00</p>
+            <p class="description">laura@efp.com</p>
+          </div>
+
+          <div class="socials underlined">
+            <div class="social-links-sm">
+              <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+              <a href="#" class="social-link"><span class="vk-gray"></span></a>
+              <a href="#" class="social-link"><span class="instagram-gray"></span></a>
+            </div>
+          </div>
+
+
+
+          <div class="button-block">
+            <img src="assets/images/pdf.svg" alt="">
+            <p>скачать</p>
+            <img src="assets/images/message.svg" alt="">
+            <p>отправить</p>
+          </div>
+          <div class="socials second">
+
+            <div class="social-links-sm">
+              <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+              <a href="#" class="social-link"><span class="vk-gray"></span></a>
+              <a href="#" class="social-link"><span class="telegram-gray"></span></a>
+              <a href="#" class="social-link"><span class="link-icon-gray"></span></a>
+              <p class="">Поделиться</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+<div class="right-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-7 col-lg-12">
+        <ul class="menu-list">
+          <li class="list-item"><a href="">Общая информация</a></li>
+          <li class="list-item"><a href="">Образование</a></li>
+          <li class="list-item"><a href="">навыки</a></li>
+          <li class="list-item"><a href="">Творческий опыт</a></li>
+          <li class="list-item"><a href="">Медиа-файлы</a></li>
+          <li class="list-item"><a href="">о себе</a></li>
+          <li class="list-item"><a href="">ЗДОРОВЬЕ</a></li>
+        </ul>
+        <div class="link-block">
+          <div class="link-views">
+            <img src="assets/images/open-eye.svg" alt="">
+            <p class="description">500 / 450</p>
+          </div>
+
+          <div class="link-buttons">
+            <a class="button-border" href="">Скачать В PDF</a>
+            <a class="button-border" href="">Отправить на почту</a>
+          </div>
+
+        </div>
+        <div class="socials">
+          <p class="">Поделиться</p>
+          <div class="social-links-sm">
+            <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+            <a href="#" class="social-link"><span class="vk-gray"></span></a>
+            <a href="#" class="social-link"><span class="telegram-gray"></span></a>
+            <a href="#" class="social-link"><span class="link-icon-gray"></span></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+
 <div class="container">
   <div class="profile-info">
     <div class="general-block">
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-5">
           <h3 class="big-title underlined uppercase">ТОО «EURASIA FILM PRODUCTION
-            <p class="about-user">Деятельность по производству кино-, видеофильмов и тв программ</p>
+            <p class="about-user description bold">Деятельность по производству кино-, видеофильмов и тв программ</p>
           </h3>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-4">
-          <p>Город</p>
+      <div class="body-block">
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Город</p>
+          </div>
+          <div class="col-6">
+            <p class="description uppercase">Алматы</p>
+          </div>
         </div>
-        <div class="col-6">
-          <p class="uppercase">Алматы</p>
+
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Страна</p>
+          </div>
+          <div class="col-6">
+            <p class="description uppercase">Казахстан</p>
+          </div>
         </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Год</p>
+          </div>
+          <div class="col-6">
+            <p class="description uppercase">2004</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Юридический адрес</p>
+          </div>
+          <div class="col-4">
+            <p class="description">бульвар Мендикулова, 22, офис 1</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Фактический адрес</p>
+          </div>
+          <div class="col-4">
+            <p class="description">бульвар Мендикулова, 22, офис 1</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Телефон</p>
+          </div>
+          <div class="col-6">
+            <p class="description uppercase">+7 (727) 277 77 77</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold bold">Email</p>
+          </div>
+          <div class="col-6">
+            <p class="description">info@efp.com</p>
+          </div>
+        </div>
+
       </div>
-
-
-      <div class="row">
-        <div class="col-4">
-          <p>Страна</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">Казахстан</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <p>Год</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">2004</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <p>Юридический адрес</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">бульвар Мендикулова, 22, офис 1</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <p>Фактический адрес</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">бульвар Мендикулова, 22, офис 1</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <p>Телефон</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">+7 (727) 277 77 77</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
-          <p>Email</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">info@efp.com</p>
-        </div>
-      </div>
-
 
     </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="profile-info">
-    <div class="education-block">
-
-      <div class="row">
-        <div class="col-10">
-          <h3 class="big-title underlined uppercase">Образование</h3>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-10">
-          <p>Высшее. Казахская Национальная Академия.</p>
-          <p>Режиссер игрового кино. 1997</p>
-          <p>Магистр. New York Film Academy.</p>
-          <p>Сценарное мастерство. 1999</p>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
-</div>
-
-<div class="container">
-  <div class="profile-info">
-    <div class="education-block">
-
-      <div class="row">
-        <div class="col-6">
-          <h3 class="big-title underlined uppercase">Дополнительное образование</h3>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-10">
-          <p>Повышение квалификации «Режиссер пластического театра».</p>
-          <p> СПБГАТИ, г. Санкт-Петербург, 2010</p>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
-</div>
-
-<div class="container">
-  <div class="profile-info">
-    <div class="skills-block">
-
-      <div class="row">
-        <div class="col-6">
-          <h3 class="big-title underlined uppercase"> навыки</h3>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-10">
-          <p>Вождение. Автомобиль.</p>
-          <p>Хобби. Живопись.</p>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="profile-info">
-    <div class="role-block">
-
-      <div class="row">
-        <div class="col-6">
-          <h3 class="big-title underlined uppercase">награды и номинации</h3>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-10">
-          <p>«Премия «Золотая маска».</p>
-          <p>Лучшая режиссура. 2019</p>
-          <p>Кинофестиваль «Евразия».</p>
-          <p>Лучший короткометражный фильм. 2019</p>
-        </div>
-      </div>
-
-
-    </div>
-
   </div>
 </div>
 
@@ -226,17 +240,22 @@
       <div class="row">
         <div class="col-6">
           <h3 class="big-title underlined uppercase">проекты</h3>
+          <img class="edit-img" src="assets/images/edit.svg" alt="">
         </div>
       </div>
 
+      <div class="body-block">
 
-      <div class="row">
-        <div class="col-6">
-          <p><span class="bold">Художественный фильм «Монгол».</span> Режиссер – Сергей Боров-старший.2007  www.mongol.com</p>
-          <p><span class="bold">Художественный фильм «Тюльпан».</span> Режиссер – Сергей Дворцевой. 2008 www.tulpan.com</p>
+        <div class="row">
+          <div class="col-12 col-lg-5">
+            <p class="description"><span class="bold">Художественный фильм «Монгол».</span> Режиссер – Сергей Боров-старший.2007 
+              www.mongol.com</p>
+            <p class="description"><span class="bold">Художественный фильм «Тюльпан».</span> Режиссер – Сергей Дворцевой.
+              2008 www.tulpan.com</p>
+          </div>
         </div>
-      </div>
 
+      </div>
     </div>
 
   </div>
@@ -247,18 +266,22 @@
     <div class="about-block">
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-lg-6">
           <h3 class="big-title underlined uppercase">презентация компании</h3>
+          <img class="edit-img" src="assets/images/edit.svg" alt="">
         </div>
       </div>
 
+      <div class="body-block">
 
-      <div class="row">
-        <div class="col-6">
-          <p>Презентация компании</p>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <img src="assets/images/pdf.svg" alt="">
+            <p class="description">Презентация компании</p>
+          </div>
         </div>
-      </div>
 
+      </div>
 
     </div>
 
@@ -272,17 +295,20 @@
       <div class="row">
         <div class="col-6">
           <h3 class="big-title underlined uppercase">о компании</h3>
+          <img class="edit-img" src="assets/images/edit.svg" alt="">
         </div>
       </div>
 
+      <div class="body-block">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <p class="description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+              id est laborum.
 
-      <div class="row">
-        <div class="col-6">
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.
-          </p>
+            </p>
+          </div>
         </div>
       </div>
 
