--- a/main-filmmaker.html
+++ b/main-filmmaker.html
@@ -19,6 +19,11 @@
     <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
   </a>
   <header class="header sm-header">
+    <ul class="navigation-menu">
+      <li class="menu-item"><a href="#" class="menu-link">моя страница</a></li>
+      <li class="menu-item"><a href="#" class="menu-link">КАСТИНГИ</a></li>
+      <li class="menu-item"><a href="#" class="menu-link">НАСТРОЙКИ</a></li>
+    </ul>
     <nav class="header-nav sm-nav">
       <ul class="navigation">
         <li class="menu-item"><span class="profile-ico"></span></li>
@@ -37,6 +42,117 @@
   </header>
 </div>
 
+<div class="left-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-7 col-md-12">
+        <div class="profile-photo">
+          <img class="img-block" src="assets/images/profile-img-2.jpg" alt="">
+        </div>
+        <ul class="menu-list">
+          <li class="list-item"><a href="">Общая информация</a></li>
+          <li class="list-item"><a href="">Образование</a></li>
+          <li class="list-item"><a href="">навыки</a></li>
+          <li class="list-item"><a href="">Творческий опыт</a></li>
+          <li class="list-item"><a href="">Медиа-файлы</a></li>
+          <li class="list-item"><a href="">о себе</a></li>
+          <li class="list-item"><a href="">ЗДОРОВЬЕ</a></li>
+        </ul>
+        <div class="link-block">
+          <div class="link-views">
+            <img src="assets/images/open-eye.svg" alt="">
+            <p class="description">500 / 450</p>
+          </div>
+        </div>
+        <div class="block">
+          <div class="contacts-block">
+            <h3 class="title red underlined uppercase">Контакты</h3>
+            <p class="description">+7 000 000 00 00</p>
+            <p class="description">ivan.ivanov@gmail.com</p>
+            <p class="description">www.ivanov.com</p>
+          </div>
+
+          <div class="contacts-block-info underlined">
+            <h3 class="title red uppercase">ставка за смену</h3>
+            <p class="description">от 500 до 5 000$</p>
+          </div>
+
+          <div class="socials underlined">
+            <div class="social-links-sm">
+              <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+              <a href="#" class="social-link"><span class="vk-gray"></span></a>
+              <a href="#" class="social-link"><span class="instagram-gray"></span></a>
+            </div>
+          </div>
+
+
+
+          <div class="button-block">
+            <img src="assets/images/pdf.svg" alt="">
+            <p>скачать</p>
+            <img src="assets/images/message.svg" alt="">
+            <p>отправить</p>
+          </div>
+          <div class="socials second">
+
+            <div class="social-links-sm">
+              <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+              <a href="#" class="social-link"><span class="vk-gray"></span></a>
+              <a href="#" class="social-link"><span class="telegram-gray"></span></a>
+              <a href="#" class="social-link"><span class="link-icon-gray"></span></a>
+              <p class="">Поделиться</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+<div class="right-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-7 col-md-12">
+        <ul class="menu-list">
+          <li class="list-item"><a href="">Общая информация</a></li>
+          <li class="list-item"><a href="">Образование</a></li>
+          <li class="list-item"><a href="">навыки</a></li>
+          <li class="list-item"><a href="">Творческий опыт</a></li>
+          <li class="list-item"><a href="">Медиа-файлы</a></li>
+          <li class="list-item"><a href="">о себе</a></li>
+          <li class="list-item"><a href="">ЗДОРОВЬЕ</a></li>
+        </ul>
+        <div class="link-block">
+          <div class="link-views">
+            <img src="assets/images/open-eye.svg" alt="">
+            <p class="description">500 / 450</p>
+          </div>
+
+          <div class="link-buttons">
+            <a class="button-border" href="">Скачать В PDF</a>
+            <a class="button-border" href="">Отправить на почту</a>
+          </div>
+
+        </div>
+        <div class="socials">
+          <p class="">Поделиться</p>
+          <div class="social-links-sm">
+            <a href="#" class="social-link"><span class="facebook-gray"></span></a>
+            <a href="#" class="social-link"><span class="vk-gray"></span></a>
+            <a href="#" class="social-link"><span class="telegram-gray"></span></a>
+            <a href="#" class="social-link"><span class="link-icon-gray"></span></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+
 <div class="container">
   <div class="profile-info">
     <div class="general-block">
@@ -44,57 +160,60 @@
       <div class="row">
         <div class="col-6">
           <h3 class="big-title underlined uppercase">Петр Петрович Петров
-            <p class="about-user">Независимый кинодеятель</p>
-            <p class="about-user">Кинорежиссер</p>
-            <p class="about-user">Режиссер документальных фильмов</p>
-            <p class="about-user">Сценарист</p>
+            <p class="about-user bold">Независимый кинодеятель</p>
+            <p class="about-user bold">Кинорежиссер</p>
+            <p class="about-user bold">Режиссер документальных фильмов</p>
+            <p class="about-user bold">Сценарист</p>
           </h3>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-4">
-          <p>Город</p>
+      <div class="body-block">
+
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold">Город</p>
+          </div>
+          <div class="col-6">
+            <p class="uppercase">Алматы</p>
+          </div>
         </div>
-        <div class="col-6">
-          <p class="uppercase">Алматы</p>
-        </div>
-      </div>
 
 
-      <div class="row">
-        <div class="col-4">
-          <p>Страна</p>
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold">Страна</p>
+          </div>
+          <div class="col-6">
+            <p class="uppercase">Казахстан</p>
+          </div>
         </div>
-        <div class="col-6">
-          <p class="uppercase">Казахстан</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-4">
-          <p>Гражданство</p>
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold">Гражданство</p>
+          </div>
+          <div class="col-6">
+            <p class="uppercase">Казахстан</p>
+          </div>
         </div>
-        <div class="col-6">
-          <p class="uppercase">Казахстан</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-4">
-          <p>Пол</p>
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold">Пол</p>
+          </div>
+          <div class="col-6">
+            <p class="uppercase">Мужской</p>
+          </div>
         </div>
-        <div class="col-6">
-          <p class="uppercase">Мужской</p>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-4">
-          <p>Возраст</p>
-        </div>
-        <div class="col-6">
-          <p class="uppercase">37</p>
+        <div class="row">
+          <div class="col-4">
+            <p class="description-bold bold">Возраст</p>
+          </div>
+          <div class="col-6">
+            <p class="uppercase">37</p>
+          </div>
         </div>
       </div>
 
@@ -111,14 +230,16 @@
           <h3 class="big-title underlined uppercase">Образование</h3>
         </div>
       </div>
+      <div class="body-block">
 
 
-      <div class="row">
-        <div class="col-10">
-          <p>Высшее. Казахская Национальная Академия.</p>
-          <p>Режиссер игрового кино. 1997</p>
-          <p>Магистр. New York Film Academy.</p>
-          <p>Сценарное мастерство. 1999</p>
+        <div class="row">
+          <div class="col-10">
+            <p><span class="bold">Высшее. Казахская Национальная Академия.</span></p>
+            <p><span class="bold"></span>Режиссер игрового кино. 1997</p>
+            <p><span class="bold">Магистр. New York Film Academy.</span></p>
+            <p><span class="bold"></span>Сценарное мастерство. 1999</p>
+          </div>
         </div>
       </div>
 
@@ -133,19 +254,20 @@
     <div class="education-block">
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-4">
           <h3 class="big-title underlined uppercase">Дополнительное образование</h3>
         </div>
       </div>
 
+      <div class="body-block">
 
-      <div class="row">
-        <div class="col-10">
-          <p>Повышение квалификации «Режиссер пластического театра».</p>
-          <p> СПБГАТИ, г. Санкт-Петербург, 2010</p>
+        <div class="row">
+          <div class="col-5">
+            <p><span class="bold">Повышение квалификации «Режиссер документального кино».</span> ВГИК, г. Москва, 1999
+            </p>
+          </div>
         </div>
       </div>
-
 
     </div>
 
@@ -162,15 +284,16 @@
         </div>
       </div>
 
+      <div class="body-block">
 
-      <div class="row">
-        <div class="col-10">
-          <p>Вождение. Автомобиль.</p>
-          <p>Хобби. Живопись.</p>
+        <div class="row">
+          <div class="col-10">
+            <p><span class="bold">Вождение.</span> Автомобиль.</p>
+            <p><span class="bold">Хобби.</span> Живопись.</p>
+          </div>
         </div>
+
       </div>
-
-
     </div>
 
   </div>
@@ -183,20 +306,49 @@
 
       <div class="row">
         <div class="col-6">
+          <h3 class="big-title underlined uppercase">творческий опыт</h3>
+        </div>
+      </div>
+
+      <div class="body-block">
+
+        <div class="row">
+          <div class="col-6">
+
+
+            <p><span class="bold">Художественный фильм «Степь».</span> 2015. Должность в проекте – кинорежиссер.</p>
+            <p><span class="bold">Сериал. «Фонари».</span> 2017. Должность в проекте – сценарист.</p>
+            <p><span class="bold">Социальный ролик «Красный крест».</span> 2003. Должность в проекте – режиссер.</p>
+            <p><span class="bold">Документальный фильм «Жизнь».</span> 2004. Должность в проекте –режиссер
+              документальных фильмов.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="profile-info">
+    <div class="role-block">
+
+      <div class="row">
+        <div class="col-6">
           <h3 class="big-title underlined uppercase">награды и номинации</h3>
         </div>
       </div>
 
+      <div class="body-block">
 
-      <div class="row">
-        <div class="col-10">
-          <p>«Премия «Золотая маска».</p>
-          <p>Лучшая режиссура. 2019</p>
-          <p>Кинофестиваль «Евразия».</p>
-          <p>Лучший короткометражный фильм. 2019</p>
+        <div class="row">
+          <div class="col-6">
+            <p><span class="bold">Премия «Золотая маска».</span> Лучшая режиссура. 2019.</p>
+            <p><span class="bold">Кинофестиваль «Евразия».</span> Лучший короткометражный фильм. 2019</p>
+          </div>
         </div>
       </div>
-
 
     </div>
 
@@ -212,37 +364,38 @@
           <h3 class="big-title underlined uppercase">вдохновение</h3>
         </div>
       </div>
+      <div class="body-block">
 
 
-      <div class="row">
-        <div class="col-6">
-          <h3>Любимые режиссеры</h3>
-          <p>Стенли Кубрик, Дэвид Линч, Акира Курасава, Мартин Скарсезе</p>
+        <div class="row">
+          <div class="col-6">
+            <h3 class="title-black">Любимые режиссеры</h3>
+            <p style="margin-left: 25px">Стенли Кубрик, Дэвид Линч, Акира Курасава, Мартин Скарсезе</p>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-6">
-          <h3>Любимые фильмы</h3>
-          <p>Амели, Прибытие, Леон, Запределье</p>
+        <div class="row">
+          <div class="col-6">
+            <h3 class="title-black">Любимые фильмы</h3>
+            <p style="margin-left: 25px">Амели, Прибытие, Леон, Запределье</p>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-6">
-          <h3>Любимая музыкаы</h3>
-          <p>Queen, Hans Zimmer, David Bowie</p>
+        <div class="row">
+          <div class="col-6">
+            <h3 class="title-black">Любимая музыкаы</h3>
+            <p style="margin-left: 25px">Queen, Hans Zimmer, David Bowie</p>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-6">
-          <h3>Любимые художники</h3>
-          <p>Andy Warhol, Gustav Klimt, Egon Schiele</p>
+        <div class="row">
+          <div class="col-6">
+            <h3 class="title-black">Любимые художники</h3>
+            <p style="margin-left: 25px">Andy Warhol, Gustav Klimt, Egon Schiele</p>
+          </div>
         </div>
+
       </div>
-
-
     </div>
 
   </div>
@@ -258,15 +411,18 @@
           <h3 class="big-title underlined uppercase">о себе</h3>
         </div>
       </div>
+      <div class="body-block">
 
 
-      <div class="row">
-        <div class="col-6">
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.
-          </p>
+        <div class="row">
+          <div class="col-6">
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -285,15 +441,16 @@
           <h3 class="big-title underlined uppercase">здоровье</h3>
         </div>
       </div>
+      <div class="body-block">
 
 
-      <div class="row">
-        <div class="col-6">
-          <p>Аллергия на пыль.</p>
+        <div class="row">
+          <div class="col-6">
+            <p>Аллергия на пыль.</p>
+          </div>
         </div>
+
       </div>
-
-
     </div>
 
   </div>
