--- a/main_new.html
+++ b/main_new.html
@@ -605,7 +605,7 @@
           </div>
 
         </div>
-        <a href="#" class="button hover-white">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+        <a href="#" class="button hover-white none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
 
       </div>
     </div>
@@ -925,6 +925,76 @@
       </div>
     </div>
   </div>
+</div>
+
+
+<div class="container">
+  <div class="our-team">
+    <h3 class="big-title underlined">НАША КОМАНДА</h3>
+    <div class="our-team-body">
+      <div class="row">
+
+
+        <div class="col-6 col-lg-2">
+          <div class="teammate teammate-1">
+            <img src="assets/images/teammate.jpg" alt="">
+            <div class="description-block">
+              <h3 class="our-title">Лаура Ергалиева</h3>
+              <p class="our-description">исполнительный директор laura@etalents.pro</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-2">
+          <div class="teammate teammate-1">
+            <img src="assets/images/teammate.jpg" alt="">
+            <div class="description-block">
+              <h3 class="our-title">Надин Цой</h3>
+              <p class="our-description">креативный директор nadine@etalents.pro</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-2">
+          <div class="teammate teammate-1">
+            <img src="assets/images/teammate.jpg" alt="">
+            <div class="description-block">
+              <h3 class="our-title">Юлия Соломенцева</h3>
+              <p class="our-description">клиентский отдел yulia@etalents.pro</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-2">
+          <div class="teammate teammate-1">
+            <img src="assets/images/teammate.jpg" alt="">
+            <div class="description-block">
+              <h3 class="our-title">Александр Моргунов</h3>
+              <p class="our-description">разработчик aleksandr@etalents.pro</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-3 col-lg-2">
+          <div class="teammate teammate-1">
+            <img src="assets/images/teammate.jpg" alt="">
+            <div class="description-block">
+              <h3 class="our-title">Андрей Таловиков</h3>
+              <p class="our-description">графический дизайнер andrey@etalents.pro</p>
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <div class="container">
